<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TaleSpin</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Enter text here</string>
    <string name="next_turn_">Next turn</string>
    <string name="welcome">Welcome to TaleSpin!  This is network-only, so you&amp;apos;ll need to log in to play!</string>
    <string name="sign_out">Sign Out</string>
    <string name="match_instructions">Type in a new word for the data in this game, then hit done.</string>
    <string name="quick_match">Quick match</string>
    <string name="continue_str">Continue</string>
    <string name="guesser_prompt">This has not been set.</string>
    <string name="clear">Clear</string>
    <string name="done">Done</string>
    <string name="leave">Leave</string>
    <string name="cancel">Cancel</string>
    <string name="finish">Finish</string>
    <string name="welcome_to_our_skeleton_app_">Welcome to TaleSpin!</string>
    <string name="check_games">My Diaries</string>
    <string name="start_match">New Diary</string>
    <string name="turn_counter">Turn counter</string>
    <string name="title_activity_list_stories">ListStories</string>
    <string name="title_activity_story_write">StoryWriteActivity</string>
    <string name="title_present_story">Present Story</string>
    <string name="title_add_chunk">Add your bit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
