<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:visibility="visible" >

        <!-- sign-in button -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_large"
            android:text="@string/welcome_to_our_skeleton_app_"
            android:textAppearance="@style/GuessWordText" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content" >
        </com.google.android.gms.common.SignInButton>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/game_list_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:context=".SkeletonActivity"
        >

        <TextView
            android:id="@+id/invitedMatches"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="@style/HelpText"
            android:width="300dp"
            android:textColor="#FFFFFFFF"
            android:text="Pending Invitations"
            android:visibility="gone"

            />

        <ListView
            android:id="@+id/list_view_invited"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_below="@+id/invitedMatches"
        >

        </ListView>

        <TextView
            android:id="@+id/allTurns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="@style/HelpText"
            android:width="300dp"
            android:textColor="#FFFFFFFF"
            android:text="All Turns"
            android:visibility="gone"
            />

        <ListView
            android:id="@+id/list_view_allTurn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/allTurns">
        </ListView>

        <TextView
            android:id="@+id/myTurns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="@style/HelpText"
            android:width="300dp"
            android:textColor="#FFFFFFFF"
            android:text="Your Turn"
            android:visibility="gone"
        />

        <ListView
            android:id="@+id/list_view_myTurn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/myTurns">
        </ListView>

        <TextView
            android:id="@+id/theirTurns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="@style/HelpText"
            android:width="300dp"
            android:textColor="#FFFFFFFF"
            android:text="Their Turn"
            android:visibility="gone"/>
           <!-- android:layout_below="@id/list_view_myTurn"
        />-->

        <ListView
            android:id="@+id/list_view_theirTurns"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/theirTurns"
           >
        </ListView>

        <TextView
            android:id="@+id/completedMatches"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="@style/HelpText"
            android:width="300dp"
            android:textColor="#FFFFFFFF"
            android:text="Completed Matches"
            android:visibility="gone"
            android:layout_below="@id/list_view_theirTurns"
            />

        <ListView
            android:id="@+id/list_view_completed"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/completedMatches"
           >
        </ListView>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/gameplay_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:visibility="gone"
        tools:context=".SkeletonActivity" >

        <EditText
            android:id="@+id/story_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="Give your story a title"
            android:textAppearance="@style/HelpText"
            android:width="300dp"
            android:visibility="gone"
            android:textColor="#FFFFFFFF"
            android:inputType="textCapSentences"/>

        <TextView
            android:id="@+id/story_title_fixed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:textAppearance="@style/Heading"
            android:width="300dp"
            android:textColor="#FFFFFFFF"
            android:layout_marginBottom="@dimen/margin_medium"
        />

        <TextView
            android:id="@+id/turn_counter_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/turn_counter"
            android:textAppearance="@style/GuessWordText"
            android:width="300dp"
            android:visibility="gone" />


            <TextView
                android:id="@+id/story_tillNow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:height="400dp"
                android:layout_weight="1"
                android:gravity="left"
                android:textAppearance="@style/GuessWordText"
                android:textColor="#FFFFFFFF"
                android:layout_marginBottom="@dimen/margin_medium"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" >
                <EditText
                    android:id="@+id/data_view"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:inputType="textCapSentences|textMultiLine"
                    android:maxLines="3"
                    android:hint="@string/hello_world"
                    android:textColor="#FFFFFFFF"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    />

                <Button
                    android:id="@+id/doneButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onDoneClicked"
                    android:text="@string/done"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >



            <Button
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCancelClicked"
                android:text="@string/cancel"
                android:textAppearance="@style/HelpText.Heading"
                tools:ignore="ButtonStyle"
                android:visibility="gone"/>

            <Button
                android:id="@+id/leaveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onLeaveClicked"
                android:text="@string/leave"
                android:textAppearance="@style/HelpText.Heading"
                tools:ignore="ButtonStyle"
                android:visibility="gone"/>/>

            <Button
                android:id="@+id/finishButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onFinishClicked"
                android:text="@string/finish"
                android:textAppearance="@style/HelpText.Heading"
                tools:ignore="ButtonStyle"
                android:visibility="gone"/>/>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/matchup_layout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:visibility="gone"
        tools:context=".SkeletonActivity" >

        <LinearLayout
            android:id="@+id/secret_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:visibility="visible"
            tools:context=".SkeletonActivity"
            tools:ignore="UselessParent" >

            <TextView
                android:id="@+id/name_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/margin_small"
                android:text=""
                android:textColor="#FFFFFFFF"
                android:textAppearance="@style/HelpText.Caption" />

            <Button
                android:id="@+id/sign_out_button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/sign_out" />

            <Button
                android:id="@+id/startMatchButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:onClick="onStartMatchClicked"
                android:text="@string/start_match" />

            <Button
                android:id="@+id/checkGamesButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:onClick="onCheckGamesClicked"
                android:text="@string/check_games" />

            <Button
                android:id="@+id/quickMatchButon"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:onClick="onQuickMatchClicked"
                android:text="@string/quick_match"
                android:visibility="gone"/>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#AAAAAAAA"
        android:visibility="gone" >

        <ProgressBar
            android:id="@+id/progress_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>

</RelativeLayout>